--- a/css/main.css
+++ b/css/main.css
@@ -146,8 +146,8 @@ ul {
   color: #ffffff;
   border-top-right-radius: 1px;
   border-top-left-radius: 1px;
-  background-color: #f6bb42;
-  border-color: #f6bb42;
+  background-color: #2196f3;
+  border-color: #2196f3;
 }
 .panel-schedule > .panel-heading + .panel-collapse .panel-body {
   border-bottom-right-radius: 1px;
